fix(tabs): fix wrong color variable used

--- a/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
+++ b/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
@@ -141,7 +141,7 @@
 
   /* tab states */
   ::slotted(&--tab:hover) {
-    color: var(--sdds-blue-958);
+    color: var(--sdds-grey-958);
 
     &::after {
       width: 100%;
@@ -159,7 +159,7 @@
   }
 
   ::slotted(&--tab__active) {
-    color: var(--sdds-blue-958);
+    color: var(--sdds-grey-958);
 
     &::after {
       width: 100%;
